[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/BasicFont42.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/BasicFont24.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/rabbit.png" type="Texture" id=3]
[ext_resource path="res://assets/brightness.png" type="Texture" id=4]
[ext_resource path="res://assets/sfx.png" type="Texture" id=5]
[ext_resource path="res://assets/music.png" type="Texture" id=6]
[ext_resource path="res://assets/master.png" type="Texture" id=7]
[ext_resource path="res://menu/SettingsMenu.gd" type="Script" id=8]
[ext_resource path="res://assets/BasicFont64.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/checkbox_empty.png" type="Texture" id=10]
[ext_resource path="res://assets/checkbox_checker.png" type="Texture" id=11]

[node name="SettingsMenu" type="Node"]
script = ExtResource( 8 )
update_settings_file_delay = 0.5

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Brightness" type="Control" parent="."]
margin_left = 492.06
margin_top = 33.4785
margin_right = 1363.06
margin_bottom = 197.479
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Brightness"]
margin_left = 81.0
margin_top = 14.0
margin_right = 851.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 1 )
text = "Particles brightness"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BrightnessSlider" type="HSlider" parent="Brightness"]
margin_left = 74.0
margin_top = 102.0
margin_right = 850.0
margin_bottom = 118.0
rect_scale = Vector2( 1, 3 )
max_value = 1.0
step = 0.01
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Brightness"]
margin_left = 846.234
margin_top = 95.0633
margin_right = 973.234
margin_bottom = 159.063
custom_fonts/font = ExtResource( 2 )
text = "100%"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="Brightness"]
margin_left = -3.13635
margin_top = 93.7827
margin_right = 124.864
margin_bottom = 221.783
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Master" type="Control" parent="."]
margin_left = 453.06
margin_top = 173.367
margin_right = 1375.06
margin_bottom = 336.367
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Master"]
margin_left = 121.0
margin_top = 10.0
margin_right = 883.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 1 )
text = "Master volume"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MasterSlider" type="HSlider" parent="Master"]
margin_left = 115.833
margin_top = 44.0424
margin_right = 889.833
margin_bottom = 99.0424
rect_scale = Vector2( 1, 3 )
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Master"]
margin_left = 907.033
margin_top = 91.9464
margin_right = 999.033
margin_bottom = 155.946
custom_fonts/font = ExtResource( 2 )
text = "100%"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Master"]
margin_left = 38.4838
margin_top = 101.33
margin_right = 166.484
margin_bottom = 229.33
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Music" type="Control" parent="."]
margin_left = 460.85
margin_top = 318.48
margin_right = 1382.85
margin_bottom = 486.48
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Music"]
margin_left = 112.0
margin_top = 4.0
margin_right = 872.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 1 )
text = "Music volume"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="Music"]
margin_left = 109.426
margin_top = 37.8962
margin_right = 883.426
margin_bottom = 92.8962
rect_scale = Vector2( 1, 3 )
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Music"]
margin_left = 900.626
margin_top = 85.8001
margin_right = 992.626
margin_bottom = 149.8
custom_fonts/font = ExtResource( 2 )
text = "100%"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Music"]
margin_left = 32.0765
margin_top = 95.1842
margin_right = 160.077
margin_bottom = 223.184
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sound" type="Control" parent="."]
margin_left = 456.334
margin_top = 462.173
margin_right = 1378.33
margin_bottom = 667.173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sound"]
margin_left = 116.0
margin_top = 1.0
margin_right = 878.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 1 )
text = "SFX volume"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SoundSlider" type="HSlider" parent="Sound"]
margin_left = 109.597
margin_top = 35.7429
margin_right = 883.597
margin_bottom = 90.7429
rect_scale = Vector2( 1, 3 )
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Sound"]
margin_left = 900.797
margin_top = 83.6469
margin_right = 992.797
margin_bottom = 147.647
custom_fonts/font = ExtResource( 2 )
text = "100%"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Sound"]
margin_left = 32.2475
margin_top = 93.0309
margin_right = 160.247
margin_bottom = 202.031
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Difficulty" type="Control" parent="."]
margin_left = 472.06
margin_top = 598.415
margin_right = 1421.06
margin_bottom = 772.413
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Difficulty"]
margin_left = 101.0
margin_top = 10.0
margin_right = 859.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 1 )
text = "Game speed"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DifficultySlider" type="HSlider" parent="Difficulty"]
margin_left = 87.2743
margin_top = 92.869
margin_right = 866.274
margin_bottom = 109.869
rect_scale = Vector2( 1, 3 )
min_value = 1.0
max_value = 5.0
value = 3.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Difficulty"]
margin_left = 850.057
margin_top = 84.6783
margin_right = 1046.06
margin_bottom = 148.678
custom_fonts/font = ExtResource( 2 )
text = "SLOW"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Difficulty"]
margin_left = 13.4272
margin_top = 82.2028
margin_right = 131.427
margin_bottom = 212.203
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="HighContrast" type="Control" parent="."]
margin_left = 625.978
margin_top = 774.131
margin_right = 1287.98
margin_bottom = 868.131
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="HighContrast"]
margin_left = 9.04318
margin_top = 9.85187
margin_right = 173.043
margin_bottom = 145.852
rect_scale = Vector2( 0.5, 0.5 )
custom_icons/checked = ExtResource( 11 )
custom_icons/unchecked = ExtResource( 10 )
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HighContrast"]
margin_left = 91.0652
margin_top = 8.77228
margin_right = 626.065
margin_bottom = 72.7723
custom_fonts/font = ExtResource( 1 )
text = "High contrast mode"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 829.308
margin_top = 896.584
margin_right = 1033.31
margin_bottom = 998.584
custom_fonts/font = ExtResource( 9 )
text = "back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="value_changed" from="Brightness/BrightnessSlider" to="." method="_on_BrightnessSlider_value_changed"]
[connection signal="value_changed" from="Master/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="Music/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Sound/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="value_changed" from="Difficulty/DifficultySlider" to="." method="_on_DifficultySlider_value_changed"]
[connection signal="toggled" from="HighContrast/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="button_down" from="Back" to="." method="_on_Back_button_down"]
